2007-08-23  Mike Krüger <mkrueger@novell.com> 

	* Parser/Parser.cs, Parser/VBNetVisitor.cs, Parser/Resolver.cs,
	  Parser/TypeVisitor.cs, Parser/SharpDevelopTree/ReturnType.cs,
	  Parser/SharpDevelopTree/Class.cs,
	  Parser/SharpDevelopTree/Constructor.cs: Changed to the latest NRefactory
	  version.

2007-08-23  Ankit Jain  <jankit@novell.com>

	* VBBindingCompilerServices.cs (GetResourceId): Generate .resources
	with resgen only if required. Set resource id even if resgen is not required.

2007-08-23  Ankit Jain  <jankit@novell.com>
	    AndrÃ©s G. Aragoneses  <knocte@gmail.com>

	* VBBindingCompilerServices.cs (GetResourceId): Use MONO_IOMAP=drive and
	only on unix.

2007-08-14  Ankit Jain  <jankit@novell.com>

	* VBBindingCompilerServices.cs (GetResourceId): Run resgen with
	MONO_IOMAP=all. See bug #82398.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.addin.xml, VBNetBinding.mdp, Makefile.am: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-07-17  Lluis Sanchez Gual <lluis@novell.com> 

	* VBBindingCompilerServices.cs: Make sure all output generated by the
	  compiler process is read.

2007-07-03  Mike Krüger <mkrueger@novell.com> 

	* VBBindingCompilerServices.cs: added signing support.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.mdp: Added missing file.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.mdp, Makefile.am: Reference shared assemblies from the
	  correct location.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/ChooseRuntimePanel.cs, Gui/CodeGenerationPanel.cs,
	  VBNetBinding.addin.xml, VBNetBinding.mdp, Makefile.am: Migration to
	  Mono.Addins.

2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.mdp: Don't copy referenced assemblies.
	* VBNetBinding.mds: Updated.

2007-03-20  Ankit Jain  <jankit@novell.com>

	* templates/VBGtkSharp2Project.xpt.xml: Rename AssemblyInfo.cs to .vb